--- a/simulate.html
+++ b/simulate.html
@@ -179,13 +179,37 @@
     };
 
     // Evaluation prompt
-    const evaluationPrompt = `את/ה פסיכולוג/ית קליני/ת. הערך/י את התמיכה שהמשתמש (role: user) נתן/ה לאורך כל השיחה, **בדיוק** במבנה של הדוגמאות המצורפות ("דוגמא 1–3"):
+    const evaluationPrompt = `להלן שלוש דוגמאות להערכה (מבנה, טון ותוכן):
 
-- פתח/י בכותרת מודגשת "משוב מסכם:".
-- הוסף/י כותרת משנה "מה נעשה נכון:" ולאחריה רשימה תבליטים (•) של 3‑6 נקודות חיוביות.
-- הוסף/י כותרת משנה "מה אפשר לשפר:" ולאחריה רשימת תבליטים (•) של 2‑4 הצעות שיפור קונקרטיות ועדינות.
+דוגמא 1
+סצנה: אחרי הלימודים, יושבות על ספסל סמוך לבית הספר. דנה פורצת בבכי: "אני אפס מוחלטת. שוב נכשלתי במבחן."
+חבר/ה תומך/ת: "זה לא הופך אותך לאפס, דנה. ראיתי כמה השקעת. בואי נדבר על זה."
 
-שמור/י על הטון האמפתי והמעודד של הדוגמאות, איזון בין חיזוק לחבר/ה ותוכן מקצועי. אל תחרוג/י מהמבנה.`;
+דוגמא 2
+סצנה: ערב בבית קפה שקט. יואב מסובב את הכוס ביד רועדת: "הכול מציף אותי, אני עומד להתפוצץ."
+חבר/ה תומך/ת: "שמעתי אותך, יואב. אני כאן. אולי ננשום ביחד כמה נשימות עמוקות?"
+
+דוגמא 3
+סצנה: שיחת וידאו לילית. רוני אומר/ת: "כולם נעלמו לי, אני לבד בעולם."
+חבר/ה תומך/ת: "רוני, זה כואב לשמוע. אני איתך עכשיו, אתה לא לבד."
+
+— — —
+הוראות: כתוב/י פידבק למשתמש (התומך) במבנה הבא בדיוק:
+
+**משוב מסכם:**
+
+
+*מה נעשה נכון:*
+
+• (שלוש‑שש נקודות חיוביות)
+
+
+*מה אפשר לשפר:*
+
+• (שתי‑ארבע הצעות שיפור קונקרטיות ועדינות)
+
+
+שמור/י על טון אמפתי ומקצועי, קצר ותכליתי.`;
 
     // === Conversation state ===
     let messages = [];
