--- a/mainpage.html
+++ b/mainpage.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>מניעת אובדן - סימולציה</title>
   <style>
     body {
@@ -11,6 +11,43 @@
       background: #f3f4f6;
     }
 
+    /* Navbar styles */
+    .navbar {
+      background: #fff;
+      border-radius: 0 0 8px 8px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      padding: 0.75rem 1rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    .navbar .welcome {
+      font-weight: bold;
+      color: #d94d72;
+      white-space: nowrap;
+    }
+
+    .navbar ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      gap: 1rem;
+      flex-direction: row-reverse; /* RTL order */
+    }
+
+    .navbar a {
+      text-decoration: none;
+      color: #555;
+      font-weight: bold;
+    }
+
+    .navbar a:hover {
+      color: #d94d72;
+    }
+
+    /* Page‑specific styles */
     .header {
       background-color: #f66da0;
       color: white;
@@ -45,9 +82,12 @@
       gap: 1rem;
     }
 
-    .icon {
-      font-size: 2rem;
-      color: #f66da0;
+    .icon-circle {
+      background-color: #fddae6;
+      border-radius: 50%;
+      padding: 0.5rem;
+      text-align: center;
+      min-width: 2.5rem;
     }
 
     .text-content {
@@ -78,48 +118,48 @@
       font-size: 1rem;
       cursor: pointer;
     }
-
-    .icon-circle {
-      background-color: #fddae6;
-      border-radius: 50%;
-      padding: 0.5rem;
-      text-align: center;
-      min-width: 2.5rem;
-    }
   </style>
 </head>
 <body>
+  <!-- Reusable Navbar -->
+  <nav class="navbar">
+    <span class="welcome">ברוך הבא, דקל</span>
+    <ul>
+      <li><a href="simulation.html">דף סימולציה</a></li>
+      <li><a href="lessons.html">דף שיעורים</a></li>
+      <li><a href="settings.html">דף הגדרות</a></li>
+      <li><a href="tel:1201">התקשר לער"ן</a></li>
+    </ul>
+  </nav>
 
   <div class="header">מניעת אובדן - סימולציה</div>
   <div class="sub-header">מה תרצי לעשות היום?</div>
   <div class="question">?</div>
 
   <div class="card">
-  <div class="icon-circle">▶️</div>
-  <div class="text-content">
-    <strong>
-      <a href="videos.html" style="color: inherit; text-decoration: none;">
-        להמשיך לצפות בקורס
-      </a>
-    </strong><br>
-    המשיכי בדיוק מהנקודה שהפסקת. שיעורים קצרים, הסברים בגובה העיניים, ודוגמאות מהחיים ומהשטח.
-  </div>
-</div>
-
-<a href="simulate.html" style="text-decoration: none; color: inherit;">
-  <div class="card">
-    <div class="icon-circle">💬</div>
+    <div class="icon-circle">▶️</div>
     <div class="text-content">
-      <strong>לתרגל סימולציות</strong><br>
-      תרגול שיחות עם דמויות שונות במצבי אמת. תוכל לבחור נושא (חרדה, עצב, פגיעה עצמית ועוד) ולתרגל תגובות עם משוב מידי.
+      <strong>
+        <a href="videos.html" style="color: inherit; text-decoration: none;">להמשיך לצפות בקורס</a>
+      </strong><br />
+      המשיכי בדיוק מהנקודה שהפסקת. שיעורים קצרים, הסברים בגובה העיניים, ודוגמאות מהחיים ומהשטח.
     </div>
   </div>
-</a>
+
+  <a href="simulate.html" style="text-decoration: none; color: inherit;">
+    <div class="card">
+      <div class="icon-circle">💬</div>
+      <div class="text-content">
+        <strong>לתרגל סימולציות</strong><br />
+        תרגול שיחות עם דמויות שונות במצבי אמת. תוכל לבחור נושא (חרדה, עצב, פגיעה עצמית ועוד) ולתרגל תגובות עם משוב מידי.
+      </div>
+    </div>
+  </a>
 
   <div class="card">
     <div class="icon-circle">🤖</div>
     <div class="text-content">
-      <strong>לדבר עם בוט</strong><br>
+      <strong>לדבר עם בוט</strong><br />
       אם יש לך שאלה שתרצי לפרוק או אולי לשאול שאלה? תוכלי לדבר כאן כדי להעלות דילמה ולהיעזר. הוא לא מחליף איש מקצוע – אבל הוא תמיד כאן.
     </div>
   </div>
@@ -128,6 +168,5 @@
     <button class="back-button">⬅️</button>
     <button class="input-button">שאלות? שאלו אותי</button>
   </div>
-
 </body>
 </html>
