--- a/settings.html
+++ b/settings.html
@@ -58,14 +58,7 @@
       <div class="lesson"><input type="checkbox" id="m2l5"><label for="m2l5">שיעור 5</label></div>
     </div>
 
-    <div class="module">
-      <h3>מודול 3</h3>
-      <div class="lesson"><input type="checkbox" id="m3l1"><label for="m3l1">שיעור 1</label></div>
-      <div class="lesson"><input type="checkbox" id="m3l2"><label for="m3l2">שיעור 2</label></div>
-      <div class="lesson"><input type="checkbox" id="m3l3"><label for="m3l3">שיעור 3</label></div>
-      <div class="lesson"><input type="checkbox" id="m3l4"><label for="m3l4">שיעור 4</label></div>
-      <div class="lesson"><input type="checkbox" id="m3l5"><label for="m3l5">שיעור 5</label></div>
-    </div>
+   
   </div>
 
   <script>
@@ -79,6 +72,7 @@
         name: document.getElementById('name').value.trim(),
         age: Number(document.getElementById('age').value),
         style: document.getElementById('style').value.trim(),
+        id : 'dekel testid',
         progress
       };
     }
