--- a/settings.html
+++ b/settings.html
@@ -72,7 +72,7 @@
         name: document.getElementById('name').value.trim(),
         age: Number(document.getElementById('age').value),
         style: document.getElementById('style').value.trim(),
-        id : 'dekel testid',
+        userId: 'dekel testid',
         progress
       };
     }
