--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="login-box">
     <!-- One Tap / Sign‑In button configuration -->
     <div id="g_id_onload"
-         data-client_id="YOUR_CLIENT_ID.apps.googleusercontent.com"
+         data-client_id="181683898823-avo330lnmj7d79a88q6rs98u7qefq9eo.apps.googleusercontent.com"
          data-callback="handleCredentialResponse"
          data-context="signin">
     </div>
