--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="g_id_onload"
          data-client_id="181683898823-avo330lnmj7d79a88q6rs98u7qefq9eo.apps.googleusercontent.com"
          data-ux_mode="redirect"
-         data-login_uri="/login.html"  <!-- back to this same page -->
+         data-login_uri="/mainpage.html"  <!-- back to this same page -->
          data-auto_prompt="false">
     </div>
 
